# dev-container-fortress

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  bootstrap.zsh  install.sh  justfile  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/alpine/: devcontainer.json
.devcontainer/ubuntu/: devcontainer.json
ansible/: README.md
ansible/group_vars/: all.yml
ansible/inventory/: hosts.example.yml
ansible/playbooks/: host.yml
ansible/roles/: README.md
brew/: Brewfile  Brewfile.linux  Brewfile.macos
containers/: README.md
containers/alpine/: Dockerfile
containers/common/: ft-host-browser-open.sh  install-aws-cli.sh  install-corporate-ca.sh  install-shell-config.sh  pyproject.toml  start-test-target.sh
containers/ubuntu/: Dockerfile
devcontainer/: devcontainer.json
docs/: BACKLOG_DEV_FORTRESS.md  ROADMAP.md  architecture.md  container-standards.md  container-usage.md  daily-driver-design.md  devcontainer-usage.md  target-validation.md  workstation-usage.md  wsl-bootstrap.md
docs/milestones/: M0-shell-and-container-baseline.md  M1-ssh-target-foundation.md  README.md  (+12 more)
ft/: pyproject.toml
ft/src/ft/: __init__.py  browser_bridge.py  cli.py  installer.py  manifest.py  models.py  platforms.py  settings.py  tool_pool.py
ft/targets/: hosts.example.toml
ft/tests/: test_cli.py  test_manifest.py  test_tool_pool.py
ft/tools/: README.md  tool-pool.toml  tools.toml
ft/workspaces/: profiles.toml
infra/: README.md
scripts/: stage-shell-config.zsh  test-container.zsh
(+28 files in other folders)
